--- a/_posts/2021-04-29-habits.md
+++ b/_posts/2021-04-29-habits.md
@@ -24,4 +24,4 @@ Without further ado then, these are my goals for this coming month and in genera
 - keep on my cut to lose 12kg by the end of August
 - wake up at a reasonable time and don't oversleep!
 
-My intention is to start creating daily or weekly status updates on these habits of mine either on this blog or on another dedicated section of this website. So stay frosty and keep your eyes peeled, or don't! That's the point, my subconscious monkey mind won't know the difference.
+My intention is to start creating daily or weekly status updates on these habits of mine either on this blog or on another dedicated section of this website. So stay frosty and keep your eyes peeled, **or don't!** That's the point, my subconscious monkey mind won't know the difference.
