--- a/_posts/2021-04-29-habits.md
+++ b/_posts/2021-04-29-habits.md
@@ -14,7 +14,7 @@ I can't claim to know the exact anthropological nor biological reasons for it, I
 
 With this newfound self-knowledge in mind, I've decided to make myself accountable to the internet. I don't think it's entirely unreasonable to suggest that humans, as social animals, evolved to be accountable to the tribe. Prehistoric man grew up accountable to his elders and his peers but in these trying times I have lost much of that accountability. Whether this simply suggests a lack of discipline on my part, or something deeper, I can't claim to know. All I know, in the end, is that I am both happier and more productive with some accountability to keep me going in life and it seems <a href="https://www.ingentaconnect.com/content/magna/jfd/2018/00000032/00000003/art00006">these</a> and <a href="https://www.tandfonline.com/doi/abs/10.1080/10810730.2018.1436622">these</a> people did too.
 
-Now, more on leveraging the internet to be accountable. Honestly, I doubt anyone is particularly interested in checking in on my habits daily but it will work as a form of psychological sleight of hand, so to speak. Ultimately, no one could be reading it or 1 million people could be reading it, that's the magic of the internet. This 'Schrödinger's audience' experiment of mine, in the very least, will be an interesting experiment.
+Now, more on leveraging the internet to be accountable. Honestly, I doubt anyone is particularly interested in checking in on my habits daily but it will work as a form of psychological sleight of hand, so to speak. Ultimately, no one could be reading it or 1 million people could be reading it, that's the magic of the internet. This 'Schrödinger's audience' of mine, in the very least, will be an interesting experiment.
 
 Without further ado then, these are my goals for this coming month and in general:
 
