--- a/_posts/2021-04-29-habits.md
+++ b/_posts/2021-04-29-habits.md
@@ -10,7 +10,7 @@ For example, when I used to start work early in the morning I would leap out of 
 
 When the lockdowns came all of my external enagagements (including lectures) were either cancelled or switched to entirely online. Suddenly I was stuck in my room day-in and day-out and what happened is exactly what you would imagine, my mental health suffered. Along with this, came a greatly increased difficulty in sticking to habits that were as ingrained as brushing one's teeth prior to lockdown. It was precisely this lack of external structure that humans evolved to rely upon.
 
-I can't claim to know the exact anthropological nor biological reasons for it, I'm a computer guy, but we evolved with the requirements of hunting food, gathering water etc, yet in a modern first-world country these are almost non-issues for all but the most unfortunate. This is a testimony to how much humans have achieved for sure, but living without the external pressures we adapted to over millions of years comes with its own problems (at least for me). What resulted was _apathy_ and _lethargy_.
+I can't claim to know the nitty-gritty anthropological nor biological reasons for it but we evolved with the requirements of hunting food, gathering water etc, yet in a modern first-world country these are almost non-issues for all but the most unfortunate. This is a testimony to how much humans have achieved for sure, but living without the external pressures we adapted to over millions of years comes with its own problems (at least for me). What resulted was _apathy_ and _lethargy_.
 
 With this newfound self-knowledge in mind, I've decided to make myself accountable to the internet. I don't think it's entirely unreasonable to suggest that humans, as social animals, evolved to be accountable to the tribe. Prehistoric man grew up accountable to his elders and his peers but in these trying times I have lost much of that accountability. Whether this simply suggests a lack of discipline on my part, or something deeper, I can't claim to know. All I know, in the end, is that I am both happier and more productive with some accountability to keep me going in life and it seems <a href="https://www.ingentaconnect.com/content/magna/jfd/2018/00000032/00000003/art00006">these</a> and <a href="https://www.tandfonline.com/doi/abs/10.1080/10810730.2018.1436622">these</a> people did too.
 
