Use config to set default layouts

--- a/_posts/2021-04-29-habits.md
+++ b/_posts/2021-04-29-habits.md
@@ -1,7 +1,7 @@
 ---
 title: The Quest for Accountability
 author: Kyle Dormer
-layout: post
+category: blog
 ---
 
 Throughout the various trials and tribulations of the COVID-19 lockdowns - something I am sure we have all faced - I have had more time than usual to reflect. Through this reflection I've noticed some patterns in my behaviour. Namely, I perform much better when there's some form of external structure.
